--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/scss/style.css">
-  <title>Frontend Mentor | Results summary component</title>
+  <link rel="stylesheet" href="scss/style.css">
+  <title>Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
@@ -31,10 +31,10 @@
     <div class="summary">
       <h3>Summary</h3>
       <ul class="summary-list-type-none">
-        <li class="reaction"><img src="/assets/images/icon-reaction.svg" alt="" /> <span class="text">Reaction</span><span class="score">80 </span><span class="outofscore">/ 100</span></li>
-        <li class="memory"><img src="/assets/images/icon-memory.svg" alt="" /> <span class="text">Memory</span><span class="score">92 </span><span class="outofscore">/ 100</span></li>
-        <li class="verbal"><img src="/assets/images/icon-verbal.svg" alt="" /> <span class="text">Verbal</span><span class="score">61 </span><span class="outofscore">/ 100</span></li>
-        <li class="visual"><img src="/assets/images/icon-visual.svg" alt="" /> <span class="text">Visual</span><span class="score">72 </span><span class="outofscore">/ 100</span></li>
+        <li class="reaction"><img src="assets/images/icon-reaction.svg" alt="" /> <span class="text">Reaction</span><span class="score">80 </span><span class="outofscore">/ 100</span></li>
+        <li class="memory"><img src="assets/images/icon-memory.svg" alt="" /> <span class="text">Memory</span><span class="score">92 </span><span class="outofscore">/ 100</span></li>
+        <li class="verbal"><img src="assets/images/icon-verbal.svg" alt="" /> <span class="text">Verbal</span><span class="score">61 </span><span class="outofscore">/ 100</span></li>
+        <li class="visual"><img src="assets/images/icon-visual.svg" alt="" /> <span class="text">Visual</span><span class="score">72 </span><span class="outofscore">/ 100</span></li>
       </ul>
       <button>Continue</button>
     </div>
